<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language_setting">

        <ListPreference
            app:defaultValue="Français"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="Français"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application_settings">

        <SwitchPreferenceCompat
            app:key="audio_setting"
            app:title="@string/audio_setting" />

        <SwitchPreferenceCompat
            app:key="alarms_setting"
            app:title="@string/alarms_setting" />

    </PreferenceCategory>

</PreferenceScreen>
