<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.epmus.mobile.poseestimation.AutoFitFrameLayout
        android:id="@+id/layout_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <com.epmus.mobile.poseestimation.AutoFitTextureView
            android:id="@+id/texture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical" />

        <com.epmus.mobile.poseestimation.DrawView
            android:id="@+id/drawview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical" />

    </com.epmus.mobile.poseestimation.AutoFitFrameLayout>

    <TextView
        android:id="@+id/warningPopUp"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_gravity="center_horizontal"
        android:alpha="0.0"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/exerciseInfo"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_gravity="top"
        android:background="#1c000000"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/infoLeft"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/margin_large"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoRight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="0dp"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="@dimen/margin_large"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:text="asd" />

    <TextView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/debug"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/background_initialize"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_gravity="center"
        android:alpha="0.0"
        android:background="@color/black" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_gravity="center"
        android:alpha="0.0"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="#33b6e5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_gravity="center"
        android:alpha="0.0"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/instructions"
        android:textColor="#33b6e5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/termine"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_gravity="center"
        android:alpha="0.0"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/end_string"
        android:textColor="#33b6e5"
        android:textStyle="bold" />
</FrameLayout>
