<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/history_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/history_button"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fixed_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/id_text_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:maxLines="2" />

            <TextView
                android:id="@+id/content_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical|end"
                android:maxLines="2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hidden_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fixed_layout">

            <!--View to display the line-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <!--Text view to display R -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="4"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="5sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="2"
                    android:text="@string/exercise_type" />

                <!-- used. For now default set to 0-->
                <TextView
                    android:id="@+id/history_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="6"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="5sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <!--View to display the line-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="5sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="2"
                    android:text="@string/exercise_time" />

                <!-- For now default set to 0-->

                <TextView
                    android:id="@+id/history_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="5"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="5sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_nbr_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="5sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="2"
                    android:text="@string/repetition_number" />

                <!-- For now default set to 0-->
                <TextView
                    android:id="@+id/history_nbr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="8"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="5sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:textAlignment="textEnd" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>